; ModuleID = '/home/carl/AnghaBench/RetroArch/managers/extr_cheat_manager.c_cheat_manager_load_game_specific_cheats.c'
source_filename = "/home/carl/AnghaBench/RetroArch/managers/extr_cheat_manager.c_cheat_manager_load_game_specific_cheats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"[Cheats]: Load game-specific cheatfile: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cheat_manager_load_game_specific_cheats() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %4 = zext i32 %3 to i64
  %5 = call i8* @llvm.stacksave()
  store i8* %5, i8** %1, align 8
  %6 = alloca i8, i64 %4, align 16
  store i64 %4, i64* %2, align 8
  %7 = trunc i64 %4 to i32
  %8 = call i64 @cheat_manager_get_game_specific_filename(i8* %6, i32 %7, i32 0)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i8* %6)
  %12 = call i32 @cheat_manager_load(i8* %6, i32 1)
  br label %13

13:                                               ; preds = %10, %0
  %14 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %14)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @cheat_manager_get_game_specific_filename(i8*, i32, i32) #2

declare dso_local i32 @RARCH_LOG(i8*, i8*) #2

declare dso_local i32 @cheat_manager_load(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
